# eRUPT_Tasks

./: Doubts.md  README.md  sortKey.py
data/graph/: 00000000.jdb  00000002.jdb  je.config.csv  je.info.0  je.stat.csv
task/: 1hl2HDElddo4cBlwm5lNI8Kt2Z1WUvWmO  1hl2HDElddo4cBlwm5lNI8Kt2Z1WUvWmO.1  1hl2HDElddo4cBlwm5lNI8Kt2Z1WUvWmO.2
task1/: Plot.ipynb  README.md  SingleGetRange.ipynb  pom.xml
task1/results/: SingleGetRange.txt  SingleVsMultiRanges.txt
task1/src/main/java/org/example/: BasicFDBOps.java  ReadSnapshot.java  SingleGetRange.java  SingleVsMultiRanges.java  TransactionConflict.java
task2/: README.md  pom.xml
task2/src/main/java/org/example/: Main.java  SampleGraphApp.java  SampleGraphAppBerkley.java  SampleGraphAppFDB.java  SampleGraphAppFDBMulti.java  SampleGraphAppMulti.java
task3/: CMakeList.txt  CMakeLists.txt  Plot.ipynb  README.md  basic_ops.c  main.c  read_snapshot.c  single_get_range.c  single_vs_multi_ranges.c  tx_conflict.c
